yyamamoto+sesetup@salesforce.com/src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>OPROARTS050__PurchaseAcount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>仕入先</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>仕入商品</relationshipLabel>
        <relationshipName>PurchaseProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OPROARTS050__UnitCost__c</fullName>
        <label>仕入単価</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OPROARTS050__Unit__c</fullName>
        <label>単位</label>
        <length>10</length>
        <type>Text</type>
    </fields>
</CustomObject>